# gsw-ait

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  logging.yml  openapiconf.yml  pyproject.toml  setup.cfg
.github/workflows/: python.yml
api/: constants.py  dependencies.py  example_db.txt  main.py  router.py  settings.py
api/gsw/: router.py  schemas.py  service.py
data/: packets.pkl
gswait/: settings.py
gswait/cmd/: __init__.py  cfs_cmd.py
gswait/config/: ccsds_header.yaml  cmd.yaml  config.yaml  tlm.pkl  tlm.yaml
gswait/config/cmd/adcs/: ADCS_NOOP_CC.yaml  ADCS_NOOP_CC.yml  ADCS_PERFORM_ADAC.yaml  ADCS_REQ_HK.yaml  ADCS_RST_COUNTERS_CC.yaml  ADCS_RST_COUNTERS_CC.yml  ADCS_SEND_AC_CC.yaml  ADCS_SEND_AD_CC.yaml  ADCS_SEND_DI_CC.yaml  ADCS_SEND_DO_CC.yaml  ADCS_SEND_GNC_CC.yaml  ADCS_SET_MODE_CC.yaml  ADCS_SET_MOMENTUM_MANAGEMENT_CC.yaml
gswait/config/cmd/arducam/: CAM_EXP3_CC.yaml  CAM_HW_CHECK_CC.yaml  CAM_NOOP_CC.yaml  CAM_RESET_COUNTERS_CC.yaml  CAM_SEND_HK_CC.yaml
gswait/config/cmd/cfs/: CF_ABANDON.yaml  CF_CANCEL.yaml  CF_DELETE_QUEUE_NODE.yaml  CF_DISABLE_DEQUEUE.yaml  CF_DISABLE_DIRECTORY_POLLING.yaml  CF_ENABLE_DEQUEUE.yaml  CF_ENABLE_DIRECTORY_POLLING.yaml  CF_FREEZE.yaml  (+20 more)
gswait/handlers/: __init__.py  ccsds_packet_handler.py  debug_hanlder.py
gswait/plugins/: __init__.py  ait_websocket.py
scripts/: cosmos2yaml.py  udp_replay.py  yaml2pydantic.py
tests/: test_stub.py
ui/ttc-monitor-react/: package-lock.json  package.json
ui/ttc-monitor-react/public/: index.html
ui/ttc-monitor-react/src/: App.css  App.tsx  index.css
(+226 files in other folders)
